--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-
+apply plugin: 'kotlin-kapt'
+//apply plugin: 'realm-android' //real db
 android {
     compileSdkVersion 28
     buildToolsVersion "29.0.2"
@@ -36,7 +37,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
 
     def room_version = "2.2.0"
     implementation "androidx.room:room-runtime:$room_version"
@@ -53,4 +54,11 @@ dependencies {
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
+
+    implementation "com.squareup.retrofit2:retrofit:2.3.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
+    kapt 'com.android.databinding:compiler:3.0.1'
+    
+   
+    
 }
